--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <title>كامبردج للمجوهرات وريادة الاعمال (دكتور صلاح الجيماز)</title>
+  <title>كامبردج تايم للاستشارات وريادة الاعمال</title>
 </head>
 
 <body>
